argocd/applications/grafana/ingressRoute/grafana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`grafana.rajesh-kumar.in`)
    kind: Rule
    services:
    - name: grafana-operator-grafana-service
      port: 3000
      scheme: http
  tls:
    secretName: rancher-tls-cert
